# strategist-terminal

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
docs/: Configure_Certs.md
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/abi/: GravityABI.json
src-tauri/src/: adaptors.rs  app.rs  application.rs  cellar_call.rs  commands.rs  config.rs  lifecycle.rs  logging.rs  main.rs  rpc.rs  schedule.rs  sommelier.rs  state.rs  steward.rs  version.rs
src-tauri/src/lifecycle/: axelar.rs  cork_vote.rs  gravity.rs  relay.rs
src/components/: AdaptorSelection.svelte  AdaptorTemplate.svelte  CallSelection.svelte  ErrorModal.svelte  FlashLoansTab.svelte  Queue.svelte  ScheduleRequest.svelte  StateModal.svelte  ToastModal.svelte  config.svelte
src/components/adaptors/: AdaptorTemplate.svelte  AdaptorsTab.svelte
src/components/flashLoan/: AdaptorSelection.svelte  CallSelection.svelte  FlashLoansTab.svelte
src/components/management/: Management.svelte  ManagementCall.svelte
src/components/requests/: Requests.svelte  StateModal.svelte  TrackingTimeline.svelte  VersionsModal.svelte
src/components/settings/: config.svelte
src/lib/: AdaptorTemplate.svelte  Queue.svelte  ScheduleRequest.svelte  aave_v3_a_token.svelte  aave_v3_debt.svelte  aavev3.svelte  aavev3Deposit.svelte  adaptorList.ts  administrativeFunctions.ts  aura_erc4626.svelte  balancer_pool.svelte  cellars.ts  config.svelte  convexCurve.svelte  ctoken.svelte  curve.svelte  feesAndReserves.svelte  handlers.ts  morpho_aave_v2_a_token.svelte  morpho_aave_v2_debt_token.svelte  morpho_aave_v3_a_token_collateral.svelte  morpho_aave_v3_a_token_p2p.svelte  morpho_aave_v3_debt_token.svelte  oneInch.svelte  staking.svelte  type.ts  uniswapV3.svelte  uniswapV3Swap.svelte  vesting.svelte  zeroX.svelte
src/lib/adaptors/: AaveATokenAdaptorV1.ts  AaveATokenV1.svelte  AaveATokenV1.ts  AaveATokenV2.svelte  AaveATokenV2.ts  AaveDebtTokenV1.svelte  AaveDebtTokenV1.ts  AaveDebtTokenV2.svelte  AaveDebtTokenV2.ts  AaveV2EnableAssetAsCollateralV1.svelte  AaveV2EnableAssetAsCollateralV1.ts  AaveV3ATokenV1.svelte  AaveV3ATokenV1.ts  AaveV3DebtTokenV1.svelte  AaveV3DebtTokenV1.ts  AuraErc4626V1.ts  BalancerPoolV1.svelte  BalancerPoolV1.ts  CollateralFTokenV1.ts  CompoundCTokenV2.svelte  CompoundCTokenV2.ts  ConvexCurveV1.svelte  ConvexCurveV1.ts  CurveV1.ts  DebtFTokenV1.svelte  DebtFTokenV1.ts  Erc4626V1.ts  FTokenV1.svelte  FTokenV1.ts  FeesAndReservesV1.svelte  FeesAndReservesV1.ts  LegacyCellarV1.ts  MorphoAaveV2ATokenV1.ts  MorphoAaveV2DebtTokenV1.ts  MorphoAaveV3ATokenCollateralV1.svelte  MorphoAaveV3ATokenCollateralV1.ts  MorphoAaveV3ATokenP2pV1.ts  MorphoAaveV3DebtTokenV1.ts  MorphoBlueCollateralV1.ts  MorphoBlueDebtV1.svelte  (+14 more)
src/lib/adaptorsDeprecated/: AaveATokenV1.svelte  AaveATokenV2.svelte  (+23 more)
src/routes/: +layout.ts  +page.svelte
src/stores/: AdapterQueue.ts  ErrorStore.ts  ToastStore.ts  scheduleRequestStore.js  scheduleRequestStore.ts
static/: output.css
