[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
somm_proto = { git = "https://github.com/peggyjv/sommelier" }
steward-proto = { git = "https://github.com/PeggyJV/steward/" }
tauri = { version = "1.6.0", features = [] }
eyre = "0.6.12"
prost = "0.7.0"
tracing = "0.1.40"
tonic = "0.4.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
futures = "0.3.30"
toml = "0.8.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
