[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
somm_proto = { git = "https://github.com/peggyjv/sommelier" }
steward-proto = { git = "https://github.com/PeggyJV/steward/" }
tauri = { version = "1.6.0", features = [] }
eyre = "0.6.12"
prost = "0.7.0"
tracing = "0.1.40"
tonic = "0.4.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
futures = "0.3.30"
toml = "0.8.10"
alloy-rs = "0.2.1"
alloy-primitives = "0.7.2"
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
env_logger = "0.11.3"
sha3 = "0.10.8"
uuid = "1.10.0"
tendermint-rpc = { version = "0.38.1", features = ["http-client"] }
alloy = { version = "0.2.0", features = ["providers", "rpc-types", "contract", "sol-types"] }
gravity_proto = { git = "https://github.com/peggyjv/gravity-bridge/" }
tokio-util = "0.7.11"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
time = "0.3.36"
chrono = "0.4.38"
fern = "0.6.2"
once_cell = "1.19.0"
paste = "1.0.15"
rstest = "0.22.0"
itertools = "0.13.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
